// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerBody should be rendered correctly 1`] = `
<div
  className="root size-36 background-white body editMode-undefined container align-items-center"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className="no-found-size-36"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": "center",
      }
    }
  >
    <div
      className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
    >
      No records found
    </div>
  </div>
</div>
`;

exports[`DataPickerBody should be rendered correctly 2`] = `
Array [
  <div
    className="searchWrapper search-size-48"
  >
    <div
      className=""
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="container uui-input-box -clickable root size-48 mode-form search"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={-1}
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
        <input
          aria-invalid={false}
          className="uui-input"
          inputMode="search"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          tabIndex={0}
          type="search"
          value=""
        />
      </div>
    </div>
  </div>,
  <div
    className="root size-36 background-white body editMode-modal container align-items-center"
    style={
      Object {
        "maxHeight": 800,
      }
    }
  >
    <div
      className="root scrollContainer root"
      cx="scrollContainer root"
      style={
        Object {
          "display": "flex",
          "height": "100%",
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "bottom": 0,
            "display": "flex",
            "flex": "1 1 auto",
            "flexDirection": "column",
            "left": 0,
            "marginBottom": 0,
            "marginRight": 0,
            "overflow": "scroll",
            "position": "relative",
            "right": 0,
            "top": 0,
          }
        }
      >
        <div
          className="listContainer"
          style={
            Object {
              "minHeight": "0px",
            }
          }
        >
          <div
            role="listbox"
            style={
              Object {
                "marginTop": 0,
              }
            }
          >
            <div
              aria-posinset={3}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={4}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={5}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={6}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={7}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={8}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={9}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={10}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={11}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={12}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
            <div
              aria-posinset={13}
              className="pickerRow container align-items-center"
              role="option"
            >
              <div
                className="cell cell size-36 padding-24 padding-left-24 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "justifyContent": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="renderItem"
                >
                  <div />
                  <div
                    className="flexSpacer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="uui-track-horizontal"
        style={
          Object {
            "display": "none",
            "height": 6,
            "position": "absolute",
          }
        }
      >
        <div
          className="uui-thumb-horizontal"
        />
      </div>
      <div
        className="uui-track-vertical"
        style={
          Object {
            "display": "none",
            "position": "absolute",
            "width": 6,
          }
        }
      >
        <div
          className="uui-thumb-vertical"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`DataPickerBody should be rendered correctly without rows 1`] = `
<div
  className="root size-36 background-white body editMode-undefined container align-items-center"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className="no-found-size-36"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": "center",
      }
    }
  >
    <div>
      Not found
    </div>
  </div>
</div>
`;
